fix adapters cache