@@ -3,12 +3,11 @@ package dev.vality.disputes.schedule.service;
 import dev.vality.disputes.exception.RoutingException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.util.ObjectUtils;
 import org.springframework.web.util.UriComponentsBuilder;
 
-import java.net.URL;
+import java.net.URI;
 import java.util.Map;
 
 @Slf4j
@@ -19,7 +18,6 @@ public class ProviderRouting {
     private static final String DISPUTES_URL_POSTFIX_DEFAULT = "disputes";
     private static final String OPTION_DISPUTES_URL_FIELD_NAME = "disputes_url";
 
-    @Cacheable(value = "adapters", key = "defaultProviderUrl", cacheManager = "adaptersCacheManager")
     public String getRouteUrl(Map<String, String> options, String defaultProviderUrl) {
         var url = options.get(OPTION_DISPUTES_URL_FIELD_NAME);
         if (ObjectUtils.isEmpty(url)) {
@@ -31,8 +29,7 @@ public class ProviderRouting {
     private String createDefaultRouteUrl(String defaultProviderUrl) {
         log.debug("Creating url by appending postfix");
         try {
-            var validUri = new URL(defaultProviderUrl).toURI();
-            return UriComponentsBuilder.fromUri(validUri)
+            return UriComponentsBuilder.fromUri(URI.create(defaultProviderUrl))
                     .pathSegment(DISPUTES_URL_POSTFIX_DEFAULT)
                     .encode()
                     .build()
